[package]
publish = false
name = "calculator"
version = "0.1.0"
authors = ["Isac Tomaz da Silva <isactomaz@protonmail.com>"]
edition = "2018"
description = "A simple calculator written in Rust"
license = "MIT"
homepage = "https://github.com/isacwq/calculator"
repository = "https://github.com/isacwq/calculator"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "calculator"
crate-type = ["cdylib"]

[package.metadata.maturin]
classifier = [
  "Operating System :: POSIX :: Linux",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3",
]

[dependencies]

[dependencies.pyo3]
version = "0.14.5"
features = ["extension-module"]
