[package]
publish = false
name = "calculator"
version = "0.1.0"
authors = ["Isac Tomaz da Silva <isactomaz@protonmail.com>"]
edition = "2021"
description = "A simple calculator written in Rust"
license = "MIT"
homepage = "https://github.com/isacwq/calculator"
repository = "https://github.com/isacwq/calculator"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "calculator"
crate-type = ["cdylib"]

[dependencies]

[dependencies.pyo3]
version = "0.20.3"
features = ["extension-module"]
