[tool.poetry]
name = "calculator"
version = "0.1.0"
description = "A simple calculator written in Rust"
authors = ["Isac Tomaz da Silva <isactomaz@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
maturin = "^0.11.5"
pytest = "^6.2.5"
toml = "^0.10.2"
twine = "^3.4.2"

[build-system]
requires = ["maturin>=0.11,<0.12"]
build-backend = "maturin"
