[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "calculator"
version = "0.1.0"
description = "A simple calculator written in Rust"
requires-python = ">=3.8"
authors = [
  {name = "Isac Tomaz da Silva", email = "isactomaz@protonmail.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
  "Operating System :: POSIX :: Linux",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
dev = ['maturin>=1.5.1', 'toml>=0.10.2', 'twine>=5.0.0']
test = ['pytest>=8.1.1']

[project.urls]
Repository = "https://github.com/isacwq/calculator.git"
Issues = "https://github.com/isacwq/calculator/issues"
